# hyperlane-validator-blueprint

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  build.rs  dist-workspace.toml  foundry.toml  package-lock.json  package.json  remappings.txt  run.sh  rust-toolchain.toml
.github/workflows/: build-setup.yml  ci.yml  release.yml  verify-template.yml
contracts/: README.md
contracts/src/: ChallengerEnrollment.sol  HelloBlueprint.sol  HyperlaneRelayerBlueprint.sol  HyperlaneValidatorBlueprint.sol  SlashingPrecompile.sol  TestRecipient.sol
contracts/src/challengers/: Challenger.sol  EquivocationChallenger.sol  IRemoteChallenger.sol  SimpleChallenger.sol
hooks/: pre.rhai
hyperlane-validator-bin/: Cargo.toml  build.rs
hyperlane-validator-bin/src/: main.rs
src/: e2e.rs  lib.rs  main.rs
test_assets/: agent-config.json.template  core-config.yaml  testnet1-addresses.yaml  testnet1-core-config.yaml  testnet1-metadata.yaml.template  testnet1-state.json  testnet2-addresses.yaml  testnet2-core-config.yaml  testnet2-metadata.yaml.template  testnet2-state.json
tests/: challenger_e2e.rs  e2e.rs
tests/utils/: blockchain.rs  challenger.rs  config.rs  mod.rs  network.rs
