[package]
name = "hyperlane-validator-blueprint"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint (AVS) for deploying Hyperlane validators"
authors = ["Serial <69764315+Serial-ATA@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/hyperlane-validator-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]

[dependencies]
tracing = "0.1"
color-eyre = "0.6"
hex = "0.4.3"
tokio = "1.43.0"
reqwest = "0.12.12"
gadget-macros = { path = "../gadget-workspace/crates/macros" }
dockworker = { git = "https://github.com/tangle-network/dockworker", features = ["docker"] }
bollard = "0.17"

[dependencies.tangle-blueprint-sdk]
#git = "https://github.com/tangle-network/gadget-workspace.git"
path = "../gadget-workspace/crates/sdk/tangle"
features = ["std"]

[build-dependencies]
blueprint-metadata = "0.2.1"

[dev-dependencies]
gadget-testing-utils = { path = "../gadget-workspace/crates/testing-utils", features = ["anvil"] }
tempfile = "3.13.0"
testcontainers = "0.23.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hyperlane-relayer-blueprint"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "HyperlaneRelayerBlueprint" }
