[package]
name = "hyperlane-validator-blueprint-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
blueprint-sdk = { workspace = true, features = ["tangle", "evm", "macros"] }
color-eyre.workspace = true
tracing.workspace = true
tokio.workspace = true
hex.workspace = true
reqwest.workspace = true
docktopus = { workspace = true, features = ["deploy"] }
bollard.workspace = true

[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["testing", "evm"] }
hyperlane-relayer-blueprint-lib.workspace = true
testcontainers = "0.23.1"
futures = "0.3.31"

[workspace]
resolver = "3"
members = ["hyperlane-validator-bin", "."]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A Tangle Blueprint (AVS) for deploying Hyperlane validators"
authors = ["Serial <69764315+Serial-ATA@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/hyperlane-validator-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]

[workspace.dependencies]
# Our blueprint
hyperlane-validator-blueprint-lib = { path = "." }
hyperlane-relayer-blueprint-lib = { git = "https://github.com/tangle-network/hyperlane-relayer-blueprint.git" }

tracing = "0.1"
tracing-subscriber = "0.3.19"
color-eyre = "0.6"
hex = "0.4.3"
tokio = "1.44.0"
reqwest = "0.12.15"
blueprint-sdk = { version = "0.1.0-alpha.7" }
docktopus = { version = "0.4.0-alpha.1" }
bollard = "0.18"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
