[package]
name = "hyperlane-validator-blueprint-bin"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
hyperlane-validator-blueprint-lib.workspace = true
blueprint-sdk = { workspace = true, features = ["tangle"] }
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
color-eyre.workspace = true

[build-dependencies]
hyperlane-validator-blueprint-lib.workspace = true
blueprint-sdk = { workspace = true, features = ["tangle", "macros", "build"] }