[package]
name = "hyperlane-validator-blueprint-bin"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
hyperlane-validator-blueprint-lib.workspace = true
blueprint-sdk = { workspace = true, features = ["tangle"] }
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
color-eyre.workspace = true

[build-dependencies]
hyperlane-validator-blueprint-lib.workspace = true
blueprint-sdk = { workspace = true, features = ["tangle", "macros", "build"] }

[package.metadata.blueprint]
sources = [
    { type = "Native", owner = "tangle-network", repo = "hyperlane-validator-blueprint", tag = "0.1.0", binaries = [
        { arch = "Amd64", os = "Linux", name = "amd64-linux-hyperlane-validator-blueprint-bin" },
        { arch = "Arm64", os = "Linux", name = "arm64-linux-hyperlane-validator-blueprint-bin" }
    ] },
    #{ type = "Container", registry = "127.0.0.1:5000", image = "hyperlane-validator-blueprint", tag = "latest" }
]
